# api-autotest

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  conftest.py  pyproject.toml  run_test.py
.github/agents/: api_test.agent.md
business/httpbin/apis/: api.py
business/httpbin/flow/: base.py  get_flow.py  mock_flow.py  post_flow.py
config/: dev.toml  prod.toml  test.toml
core/: api.py  assertions.py  auth_manager.py  client_header.py  config.py  data_factory.py  db.py  enums.py  exceptions.py  flow.py  initializer.py  logger.py  session_manager.py
tests/httpbin/: conftest.py  httpbin_test.py  test_http_method.py
utils/: collect_test_result_data.py  decorator.py  httpbin_auth_strategy.py  send_failed_case_notification.py  utils.py
web_app/: __init__.py  main.py
web_app/models/: __init__.py  requests.py  responses.py
web_app/services/: __init__.py  flow_service.py  test_runner_service.py
web_app/static/: index.html
